test_suite/tests/ui/borrow/no_lifetimes.stderr
error: field `s` has no lifetimes to borrow
  --> $DIR/no_lifetimes.rs:12:10
   |
12 | #[derive(Deserialize)]
   |          ^^^^^^^^^^^

error: aborting due to previous error

