test_suite/tests/ui/borrow/no_lifetimes.rs
#[macro_use]
extern crate serde_derive;

#[derive(Deserialize)]
struct Test {
    #[serde(borrow)]
    s: String,
}

fn main() {}
